--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "host": "react-scripts start --host 0.0.0.0"
   },
   "eslintConfig": {
     "extends": [
