--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 services:
   frontend:
     build: .
-    image: 
+    image: complaint-landing:latest
     container_name: complaint-landing
     ports:
       - "9260:80"
