--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
-REACT_APP_API_URL=http://localhost:9260
+REACT_APP_API_URL=https://semi.et   
 REACT_APP_DEFAULT_LANGUAGE=en
-REACT_APP_BASE_URL=http://test.mesobcenter.et/digit-ui/citizen/login
+REACT_APP_BASE_URL=https://semi.et/digit-ui/citizen/login
