remove storage in header

--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 REACT_APP_API_URL=https://semi.et   
 REACT_APP_DEFAULT_LANGUAGE=en
-REACT_APP_BASE_URL=http://semi.et/digit-ui/citizen/login
+REACT_APP_BASE_URL=http://localhost:3000/digit-ui/citizen/login
 NODE_ENV = production
