--- a/nginx.conf
+++ b/nginx.conf
@@ -1,18 +1,19 @@
 server {
     listen 80;
     server_name localhost;
+
     root /usr/share/nginx/html;
     index index.html;
 
-    # 1. Frontend UI
-    location /complaint {
-        alias /usr/share/nginx/html/;
+    include /etc/nginx/mime.types;
+    default_type application/octet-stream;
+
+    # Frontend at /complaint
+    location /complaint/ {
         try_files $uri $uri/ /index.html;
     }
 
-    # 2. Fix the 404/Double Pathing
-    # Adding the trailing slash to BOTH the location and proxy_pass 
-    # tells Nginx to map /pgr-analytics/v1 -> /v1 on the backend
+    # Backend API
     location /pgr-analytics/ {
         proxy_pass http://pgr-custom-service.egov.svc.cluster.local:80/;
         proxy_set_header Host $host;
@@ -21,7 +22,7 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
     }
 
-    # 3. Standard React Fallback
+    # React fallback
     location / {
         try_files $uri $uri/ /index.html;
     }
